<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cat_Medicos"
    android:background="@color/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_app_logo"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/logocir" />

                        <TextView
                            android:id="@+id/text_app_name"
                            android:layout_width="223dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:text="TINKU"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/about_title"
                            android:textSize="34sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_version" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="BETA 0.3"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_desc" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/about_title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_user_ab" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/company"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_company"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TINKU"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_desc" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_email_ab" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="email"
                                android:text="@string/email"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="tinkucdaltamirano@gmail.com"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_desc" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_web" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="web"
                                android:text="@string/website"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_website"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Proximamente"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_desc" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_call" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="phone"
                                android:text="@string/contact"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_contact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Asesoría gratuita"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/about_desc" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/about_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tinku tiene experiencia en todas las tecnologías mencionadas a continuación y nuestro enfoque profesional y dedicado hacia nuestro trabajo siempre ha satisfecho a nuestros clientes y usuarios. Hemos alcanzado este nivel gracias a la dedicación y el arduo trabajo de nuestro equipo de que siempre brindan las mejores soluciones. " />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fundadores: Xavier Aviles Perez, Axel Ortiz Borja" />


            </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>